--- a/ars1/uni.net__ARS/uni.net/UNIVER/OXFORD/oxford.html
+++ b/ars1/uni.net__ARS/uni.net/UNIVER/OXFORD/oxford.html
@@ -55,7 +55,7 @@
                     <h2>University of Oxford</h2>
                 </div>
                 <div class="main-text">
-                    <h2>Факультеты и колледжи Оксфордского университета</h2>
+                    <p>Факультеты и колледжи Оксфордского университета</p>
                     <div class="text-1">
                         <p>
                             Оксфорд похож на маленькое федеративное государство: помимо центрального университета здесь функционируют 38 колледжей
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div class="minimum-points">
-                    <h2>Минимальные баллы по английскому языку для поступления в Оксфорд</h2>
+                    <p>Минимальные баллы по английскому языку для поступления в Оксфорд</p>
                     <div class="list">
                         <ul class="exams">
                             <li>Тест / диплом</li>
@@ -142,7 +142,7 @@
                     </div>
                 </div>
                 <div class="calendar">
-                    <h2>Календарь поступления на бакалавриат Оксфордского университета</h2>
+                    <p>Календарь поступления на бакалавриат Оксфордского университета</p>
                     <div class="calendar-list">
                         <ol class="stage">
                             <p>Этап</p>
@@ -174,11 +174,11 @@
                     </div>
                 </div>
                 <div class="doctor">
-                    <h2>Магистратура и докторантура Оксфорда –
+                    <p>Магистратура и докторантура Оксфорда –
                         <div class="other-font-text">
                             <p>Graduate programs</p>
                         </div>
-                    </h2>
+                    </p>
                     <div class="doctor-text">
                         <p>
                             <p class="in-bl-text">Особенности подачи документов в магистратуру Оксфордского университета также зависят от конкретной программы обучения. В некоторых случаях от кандидатов требуется предоставить результаты</p>
