--- a/ars1/uni.net__ARS/uni.net/catalog/index_catalog.html
+++ b/ars1/uni.net__ARS/uni.net/catalog/index_catalog.html
@@ -19,7 +19,7 @@
             <div class="container">
                 <div class="header__shell">
                     <div class="header__logo">
-                        <img class="header__logo-img" src="img/logo.png" alt="">
+                        <img class="header__logo-img" src="img/Logo.png" alt="">
                         <p class="header__logo-name">UNI.NET</p>
                     </div>
                     <div class="header__nav">
@@ -27,7 +27,7 @@
                             <div id="nav" class="header__nav-ul hide">
                                 <ul>
                                     <li><a href="../../../../index.html">Главная</a></li>
-                                    <li><a href="/ars1/uni.net__ARS/uni.net/catalog/index_catalog.html">Каталог</a></li>
+                                    <li><a href="index_catalog.html">Каталог</a></li>
                                     <li><a href="#">Мы в сотсетях</a></li>
                                     <li><a href="#">О нас</a></li>
                                     <li><a href="#">Контакты</a></li>
